--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" name="display" id="display">
+    <h1>
+        <input type="text" name="display" id="display">
+    </h1>
+    <script src="./js/display.js"></script>
+    <script src="./js/operaciones.js"></script>
+    <script src="./js/manejarVariable.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
