--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--TODO agregar codigo html, css -->
     <input type="text" name="display" id="display">
     <script src="./js/display.js"></script>
     <script src="./js/operaciones.js"></script>
