--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <!--TODO agregar codigo html, css -->
     <div class="jumbotron">
         <h1 class="display-4"><input type="text" name="display" id="display"></h1>
         <input class="btn btn-primary btn-lg" type="button" onclick="imprimirOperaciones()" value="Mostrar historial">
@@ -20,9 +19,7 @@
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <div id="historico">
-                    
-                </div>
+                <div id="historico"></div>
             </div>
             <div class="col-md-3"></div>
         </div>
